<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chats"
            android:title="@string/menu_chats" />
        <item
            android:id="@+id/nav_groups"
            android:title="@string/menu_groups" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile" />
    </group>
    <item android:title="System Utilities">
        <menu>
            <item
                android:id="@+id/nav_about_app"
                android:title="@string/menu_about_app" />
            <item
                android:id="@+id/nav_about_device"
                android:title="@string/menu_about_device" />
            <item
                android:id="@+id/nav_terms"
                android:title="@string/menu_terms" />
            <item
                android:id="@+id/nav_contact"
                android:title="@string/menu_contact" />
            <item
                android:id="@+id/nav_updates"
                android:title="@string/menu_updates" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>
