<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/ivNavLogo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/ic_pigeon_logo" />

    <TextView
        style="@style/PigeonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/app_name"
        android:textColor="@color/colorOnPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        style="@style/PigeonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:textColor="@color/colorMetaSend"
        android:textSize="12sp" />

</LinearLayout>
